Edited scheduler and hasUntranslatetTextItems()